# methods-algorithms

./: .gitignore  CMakeLists.txt  conversor_bin_dec.cpp  main.cpp
LU_piv_parc/: q2.cpp
algorithms/include/: LU_piv_parc.h  bissecao.h  e_gauss.h  falsa_posicao.h  gauss_jacobi.h  gauss_jordan.h  gauss_siedel.h  newton_rapson.h  polinomio.h  ponto_fixo.h  secante.h
algorithms/src/: LU_piv_parc.cpp  bissecao.cpp  e_gauss.cpp  falsa_posicao.cpp  gauss_jacobi.cpp  gauss_jordan.cpp  gauss_siedel.cpp  newton_rapson.cpp  polinomio.cpp  ponto_fixo.cpp  secante.cpp
falsa_posicao_e_bissecao/: q1.cpp
gauss_jacobi_e_gauss_siedel/: q4.cpp
gauss_jordan/: q3.cpp
newton_rapson_e_secante/: q2.cpp
polinomio_e_ponto_fixo/: q3.cpp
sub_ret_e_e_gauss/: q1.cpp
